<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.fragment.CharacterDetailsFragment">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight">

        <ImageView
                android:id="@+id/thumbnailImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/thumbnail_mock"
                android:scaleType="fitXY"
        />
        <ImageView
                android:id="@+id/navBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="5dp"
                android:src="@drawable/ic_navigate_back"
        />

        <TextView
                android:id="@+id/nameLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/thumbnailImageView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/name_label"
                android:textColor="@color/marvelRed"
        />

        <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nameLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textSize="19sp"
        />

        <TextView
                android:id="@+id/descLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/description_label"
                android:textColor="@color/marvelRed"
        />

        <TextView
                android:id="@+id/descTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/descLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:lines="3"
                android:text="@string/no_description"
                android:textColor="@color/white"
                android:textSize="19sp"
        />

        <TextView
                android:id="@+id/comicsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/descTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/comics_label"
                android:textColor="@color/marvelRed"
        />
        <ProgressBar
                android:id="@+id/comicsProgressBar"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comicsLabelTextView"
        />
        <TextView
                android:id="@+id/comicsErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/comicsLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/no_comics"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
        />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/comicsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comicsLabelTextView"
                android:layout_marginTop="10dp"
        >
        </android.support.v7.widget.RecyclerView>


        <TextView
                android:id="@+id/seriesLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/comicsRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/series_label"
                android:textColor="@color/marvelRed"
        />
        <ProgressBar
                android:id="@+id/seriesProgressBar"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seriesLabelTextView"
        />
        <TextView
                android:id="@+id/seriesErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/seriesLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/no_series"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
        />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/seriesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seriesLabelTextView"
                android:layout_marginTop="10dp"
        >
        </android.support.v7.widget.RecyclerView>

        <TextView
                android:id="@+id/storiesLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/seriesRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/stories_label"
                android:textColor="@color/marvelRed"
        />
        <ProgressBar
                android:id="@+id/storiesProgressBar"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storiesLabelTextView"
        />
        <TextView
                android:id="@+id/storiesErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/storiesLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/no_stories"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
        />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/storiesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storiesLabelTextView"
                android:layout_marginTop="10dp"
        >
        </android.support.v7.widget.RecyclerView>

        <TextView
                android:id="@+id/eventsLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/storiesRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/events_label"
                android:textColor="@color/marvelRed"
        />

        <ProgressBar
                android:id="@+id/eventsProgressBar"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventsLabelTextView"
        />
        <TextView
                android:id="@+id/eventsErrorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/eventsLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/no_events"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
        />
        <android.support.v7.widget.RecyclerView
                android:id="@+id/eventsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventsLabelTextView"
                android:layout_marginTop="10dp"
        >
        </android.support.v7.widget.RecyclerView>

        <TextView
                android:id="@+id/linksLabelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/eventsRecyclerView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:text="@string/links_label"
                android:textColor="@color/marvelRed"
        />

        <TextView
                android:id="@+id/detailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linksLabelTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/detail_label"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:textColor="@color/white"
                android:textSize="19sp"
        />
        <TextView
                android:id="@+id/wikiTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/detailTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/wiki_label"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:textColor="@color/white"
                android:textSize="19sp"
        />

        <TextView
                android:id="@+id/comicTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/wikiTextView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/comic_link_label"
                android:drawableEnd="@drawable/ic_navigate_next"
                android:textColor="@color/white"
                android:textSize="19sp"
        />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>